--- a/index.html
+++ b/index.html
@@ -47,21 +47,23 @@
         <div class="cards__card card">
           <h2 class="card__heading">Announcements</h2>
           <ul role="list" class="card__bullets flow"> 
-            <li>Site Recoded</li>
+            <a href="https://discord.com/invite/qAbTAAv6dU"><strong>Join the discord</strong></a>
           </ul>
         </div>
 
         <div class="cards__card card">
           <h2 class="card__heading">Updates</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Check the discord for updates!</li>
+            <a href="/blogs/updates.html"><strong>NEW UPDATE LIVE</strong></a>
+            <br>
+            <a href="/blogs/updates.html"><strong>(1/9/24)</strong></a>
           </ul>        
         </div> 
         
         <div class="cards__card card">
-          <h2 class="card__heading">Other Links</h2>
+          <h2 class="card__heading">Partners</h2>
           <ul role="list" class="card__bullets flow">
-            <li><a href="/blogs/links.html"><strong>MOVED TO BLOGS</strong></a></li>
+            <li><a href="/404.html"><strong>Soon...</strong></a></li>
           </ul>
         </div>
       </div>
