--- a/more.html
+++ b/more.html
@@ -44,7 +44,7 @@
     <h1 class="cards__heading">More...</h1>
     <div class="cards cards">
       <div class="cards__inner">
-        <!-- Start the blogs -->
+        <!-- Start the cards -->
                 <div class="cards__card card">
           <h2 class="card__heading">Discord</h2>
           <ul role="list" class="card__bullets flow">
@@ -84,6 +84,17 @@
         </div>
 
         <div class="cards__card card">
+          <h2 class="card__heading">Update Log</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Important updates logged here.</li>
+            <li></li>
+            <br>
+          </ul>
+          <a href="/more/updates.html" class="card__cta cta">View...</a>
+        </div>
+
+
+        <div class="cards__card card">
           <h2 class="card__heading">about:blank loader</h2>
           <ul role="list" class="card__bullets flow">
             <li>Load a site in about:blank.</li>
@@ -102,15 +113,15 @@
         </div>
 
         <div class="cards__card card">
-          <h2 class="card__heading">Credits</h2>
+          <h2 class="card__heading">Eaglercrack FAQ</h2>
           <ul role="list" class="card__bullets flow">
-            <li>The developers and credits.</li>
+            <li>Eaglercrack FAQ, credits, Q&A.</li>
             <br>
             <br>
           </ul>
-          <a href="/more/credits.html" class="card__cta cta">View...</a>
+          <a href="/more/faq.html" class="card__cta cta">View...</a>
         </div>
-
+        <!-- Start the cards -->
       <div class="overlay cards__inner"></div>
     </div>
   </main>
