--- a/more/faq.html
+++ b/more/faq.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="/style.css">
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    
     <nav class="nav">
       <div class="logo">
         <img src="/assets/eaglercraft.jpg" alt="Logo">
-        <a href="/index.html"><h1>EaglercrackX</h1></a>
+          <h1>EaglercrackX</h1>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
@@ -30,7 +29,6 @@
               <a href="/more.html">More...</a>
           </li>
       </ul>
-    
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
               Join the Discord
@@ -38,16 +36,15 @@
       </div>
   </nav>
 </head>
-
 <body>
-
 <br>
 <br>
 <br>
-<h1 class="h1a">Eaglercrack Credits</h1>
+<h1 class="h1a">Eaglercrack FAQ</h1>
 <br>
 <br>
-<h1 class="h1c">Website Developers and Staff</h1>
+<br>
+<h1 class="h1c">Website Developers/Staff</h1>
 <br>
 <a class="h1b" href="https://discord.com/users/1153670965939675249">Proofr</a>
 <br>
@@ -55,8 +52,53 @@
 <br>
 <br>
 <br>
-<br>
 <h1 class="h1c">HTML5 Ping Embed (Used in server checker)</h1>
+<br>
 <a href="https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed" class="h1b">https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed</a>
+<br>
+<br>
+<br>
+<h1 class="h1c">This site is not associated with Mojang or Microsoft</h1>
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1 class="h1a">Q&A</h1>
+<br>
+<br>
+<h1 class="h1c">Q. When is the next Eaglercrack update?</h1>
+<br>
+<a class="h1b">A. Updates release at random, but atleast few times a month.</a>
+<br>
+<br>
+<br>
+<br>
+<h1 class="h1c">Q. How can I put my server/client on Eaglercrack? How can I partner with Eaglercrack?</h1>
+<br>
+<a class="h1b">A. You can do that by using the</a>
+<a class="h1b" href="/more/forms.html"><strong>forms</strong></a>
+<br>
+<br>
+<br>
+<br>
+<a class="h1c">Q. What did you use to code this website?</a>
+<br>
+<br>
+<a class="h1b">A. I use</a>
+<a class="h1b" href="https://vscode.dev"><strong>VScode</strong></a>
+<a class="h1b">and</a>
+<a class="h1b" href="https://desktop.github.com/"><strong>Github Desktop</strong></a>
+
+
+
+
+
+<br>
+<br>
 </body>
 </html>
