--- a/partners/interlinks.html
+++ b/partners/interlinks.html
@@ -31,6 +31,12 @@
           </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
+        <a class="buttonI" href="https://discord.gg/bWPS79jM5K">
+            InterLink
+        </a>
+    </div>
+
+      <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
               Join the Discord
           </a>
@@ -43,15 +49,35 @@
 <br>
 <br>
 <br>
-<h1 class="h1a">Eaglercraft bugs and issues</h1>
+<h1 class="h1a">InterLink</h1>
+<h1 class="h1d">(Partner)</h1>
 <br>
 <br>
 <br>
-<h1 class="h1c">Crashing</h1>
+<h1 class="h1c" style="text-align:center">Free Proxies, Game and Eagler Sites, And More</h1>
 <br>
-<a class="h1b">1. If you are using brave (browser) try turning off sheilds.</a>
+<h1 class="h1p">Are you sick of not finding unblocked Game sites at school or you want to unlock a site?</h1>
 <br>
-<a class="h1b">2. Make sure javascript is enabled.</a>
-
+<h1 class="h1p">Well you came to the right place in Interlink We have,</h1>
+<br>
+<br>
+<h1 class="h1p"><strong>🏅 First 150 Members get OG</strong></h1>
+<br>
+<h1 class="h1p"><strong>📃 Eagler Client links</strong></h1>
+<br>
+<h1 class="h1p"><strong>📌 Eagler Server Ip’s</strong></h1>
+<br>
+<h1 class="h1p"><strong>🌐 Proxies</strong></h1>
+<br>
+<h1 class="h1p"><strong>🧾 Game Sites </strong></h1>
+<br>
+<h1 class="h1p"><strong>🎉 Friendly Server</strong></h1>
+<br>
+<h1 class="h1p"><strong>📈 And More</strong></h1>
+<br>
+<br>
+<h1 class="h1p"><strong>Join Today</strong></h1>
+<br>
+<h1 class="h1p"><a href="https://discord.gg/bWPS79jM5K"><strong>Discord: https://discord.gg/bWPS79jM5K</strong></a></h1>
 </body>
 </html>
