--- a/more/updates.html
+++ b/more/updates.html
@@ -45,6 +45,52 @@
 <br>
 <br>
 <br>
+<h1 class="h1c">Big Update 5 (1/9/24)</h1>
+<br>
+<a class="h1b">[+] Eaglercraft server checker</a>
+<br>
+<a class="h1b">[+] Added FAQ page (located on the more page)</a>
+<br>
+<a class="h1b">[+] Added eaglercrack.github.io to link page</a>
+<br>
+<a class="h1b">[+] Updated update log</a>
+<br>
+<a class="h1b">[+] Added MessCraft server to server lists</a>
+<br>
+<a class="h1b">[+] Added MythSMP server to server lists</a>
+<br>
+<a class="h1b">[+] Added Dxomg proxy server to server lists</a>
+<br>
+<a class="h1b">[+] Added Lax1dude's HTML5 Ping Embed to credits</a>
+<br>
+<a class="h1b">[+] Added packs tab on navigation bar on crystal texture pack page</a>
+<br>
+<a class="h1b">[+] Added "I did NOT make any of these texture packs." at bottom of texture packs page</a>
+<br>
+<a class="h1b">[~] Moved Update log page to more page</a>
+<br>
+<a class="h1b">[~] Changes on the home page</a>
+<br>
+<a class="h1b">[~] Minor changes on the website</a>
+<br>
+<a class="h1b">[~] Minor changes in discord</a>
+<br>
+<a class="h1b">[-] Removed credits page</a>
+<br>
+<a class="h1b">[-] Removed issues page</a>
+<br>
+<a class="h1b">[-] Removed about:blank button on navigation bar</a>
+<br>
+<br>
+<a class="h1b">(Server Embed Credit:  https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed)</a>
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
 <h1 class="h1c">Small Update 1 (1/7/24)</h1>
 <br>
 <a class="h1b">[+] Added Sfactions server to #servers channel in discord</a>
