changed legendsmp server ip

--- a/servers.html
+++ b/servers.html
@@ -114,10 +114,10 @@
             <h2 class="card__heading">Legend smp</h2>
             <ul role="list" class="card__bullets flow">
               <h4>Server IP</h4>
-              <li>wss://legxndsmp.minecraft.pe</li>
+              <li>wss://legendsmp.minecraft.pe</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://legxndsmp.minecraft.pe">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://legendsmp.minecraft.pe">Copy IP</a>
           </div>
 
           <div class="cards__card card">
