Added 2 update log forgtotten
I forgot to add 2 things in the update log.

--- a/more/updates.html
+++ b/more/updates.html
@@ -55,6 +55,10 @@
 <br>
 <a class="h1b">[+] Updated update log</a>
 <br>
+<a class="h1b">[+] Added @Status role in discord</a>
+<br>
+<a class="h1b">[+] Added Rosalia Network to #servers channel in discord</a>
+<br>
 <a class="h1b">[+] Added MessCraft server to server lists</a>
 <br>
 <a class="h1b">[+] Added MythSMP server to server lists</a>
