--- a/404.html
+++ b/404.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    
     <nav class="nav">
       <div class="logo">
         <img src="/assets/eaglercraft.jpg" alt="Logo">
@@ -30,7 +29,6 @@
               <a href="/more.html">More...</a>
           </li>
       </ul>
-      
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
               Join the Discord
@@ -38,7 +36,6 @@
       </div>
   </nav>
 </head>
-
 <body>
   <main class="cards">
     <h1 class="cards__heading">404</h1>
@@ -53,6 +50,5 @@
       <div class="overlay cards__inner"></div>
     </div>
   </main>
-  
 </body>
 </html>
