Fixed new update live on home

--- a/1.5.html
+++ b/1.5.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/cb7290d6de.js" crossorigin="anonymous"></script>
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
@@ -33,7 +34,7 @@
       
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
-              Join the Discord
+            <i class="fa-brands fa-discord"></i>&nbsp Join the Discord
           </a>
       </div>
   </nav>
@@ -50,8 +51,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Version: C.M.M's-Fuchsia-X-Client</li>
           </ul>
-          <a href="/clients/1.5/fuchsiax.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/fuchsiax.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/fuchsiax.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/fuchsiax.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -59,8 +60,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Version: </li>
           </ul>
-          <a href="/clients/1.5/OddFutureClient.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/OddFutureClient.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/OddFutureClient.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/OddFutureClient.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -68,8 +69,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Updated: 11/21/23</li>
           </ul>
-          <a href="/clients/1.5/codercraft.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/codercraft.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/codercraft.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/codercraft.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
   
         <div class="cards__card card">
@@ -77,8 +78,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Updated: 11/21/23</li>
           </ul>
-          <a href="/clients/1.5/kerosene.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/kerosene.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/kerosene.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/kerosene.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
         
         <div class="cards__card card">
@@ -86,8 +87,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Updated: 11/21/23</li>
           </ul>
-          <a href="/clients/1.5/nebula.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/nebula.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/nebula.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/nebula.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -95,8 +96,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Version: NitClient 2.0</li>
           </ul>
-          <a href="/clients/1.5/nitclient.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/nitclient.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/nitclient.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/nitclient.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -104,8 +105,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Version: beta_0.1.8.4</li>
           </ul>
-          <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -113,8 +114,8 @@
           <ul role="list" class="card__bullets flow">
             <li>Version: Service Pack #1</li>
           </ul>
-          <a href="/clients/1.5/eagler1.5.html" class="card__cta cta">Play</a>
-          <a href="/clients/1.5/eagler1.5.html" class="card__cta cta" download>Download</a>
+          <a href="/clients/1.5/eagler1.5.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+          <a href="/clients/1.5/eagler1.5.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 <!-- End -->
       <div class="overlay cards__inner"></div>
