--- a/packs/crystals.html
+++ b/packs/crystals.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/cb7290d6de.js" crossorigin="anonymous"></script>
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
@@ -32,7 +33,7 @@
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
-              Join the Discord
+            <i class="fa-brands fa-discord"></i>&nbspJoin the Discord
           </a>
       </div>
   </nav>
