--- a/servers.html
+++ b/servers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/cb7290d6de.js" crossorigin="anonymous"></script>
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
@@ -34,7 +35,7 @@
       
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
-              Join the Discord
+            <i class="fa-brands fa-discord"></i>&nbsp Join the Discord
           </a>
       </div>
   </nav>
@@ -87,7 +88,7 @@
               <li>wss://mc.arch.lol</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mc.arch.lol">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mc.arch.lol"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -97,7 +98,7 @@
               <li>wss://zentic.cc</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://zentic.cc">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://zentic.cc"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
           
           <div class="cards__card card">
@@ -107,7 +108,7 @@
               <li>wss://aeon-network.net/1.8</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://aeon-network.net/1.8">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://aeon-network.net/1.8"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -117,7 +118,7 @@
               <li>wss://legendsmp.minecraft.pe</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://legendsmp.minecraft.pe">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://legendsmp.minecraft.pe"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -127,7 +128,7 @@
               <li>wss://ggsmp.net/</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://ggsmp.net/">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://ggsmp.net/"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -137,7 +138,7 @@
               <li>wss://clever-teaching.com/web/</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://clever-teaching.com/web/">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://clever-teaching.com/web/"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -147,7 +148,7 @@
               <li>wss://mess.eu.org/s1/</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mess.eu.org/s1/">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mess.eu.org/s1/"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -157,7 +158,7 @@
               <li>wss://verise.repl.co/</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://verise.repl.co/">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://verise.repl.co/"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -167,7 +168,7 @@
               <li>wss://play.craftclue.rocks</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://play.craftclue.rocks">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://play.craftclue.rocks"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -177,7 +178,7 @@
               <li>wss://asianf4rmer.minecraft.pe</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://asianf4rmer.minecraft.pe">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://asianf4rmer.minecraft.pe"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -186,7 +187,7 @@
               <h4>Server IP</h4>
               <li>wss://intelle.cloud/soccer</li>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://intelle.cloud/soccer">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://intelle.cloud/soccer"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -196,7 +197,7 @@
               <li>wss://mcus1.dxomg.link</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mcus1.dxomg.link">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mcus1.dxomg.link"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -205,7 +206,7 @@
               <h4>Server IP</h4>
               <li> wss://mc.theludos.com</li>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip=" wss://mc.theludos.com">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip=" wss://mc.theludos.com"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -214,7 +215,7 @@
               <h4>Server IP</h4>
               <li>wss://sus.shhnowisnottheti.me</li>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://sus.shhnowisnottheti.me">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://sus.shhnowisnottheti.me"><i class="fa-solid fa-copy"></i>&nbsp Copy IP</a>
           </div>
 
     <div class="overlay cards__inner"></div>
