--- a/more/faq.html
+++ b/more/faq.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/cb7290d6de.js" crossorigin="anonymous"></script>
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <nav class="nav">
@@ -31,7 +32,7 @@
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
-              Join the Discord
+            <i class="fa-brands fa-discord"></i>&nbspJoin the Discord
           </a>
       </div>
   </nav>
@@ -55,6 +56,11 @@
 <h1 class="h1c">HTML5 Ping Embed (Used in server checker)</h1>
 <br>
 <a href="https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed" class="h1b">https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed</a>
+<br>
+<br>
+<h1 class="h1c">Font Awesome (Used some logos)</h1>
+<br>
+<a href="https://fontawesome.com/" class="h1b">https://fontawesome.com/</a>
 <br>
 <br>
 <br>
