--- a/1.3.html
+++ b/1.3.html
@@ -50,8 +50,8 @@
             <ul role="list" class="card__bullets flow">
               <li>Updated: 11/21/23</li>
             </ul>
-            <a href="/clients/1.3/eagler1.3.html" class="card__cta cta">Play</a>
-            <a href="/clients/1.3/eagler1.3.html" class="card__cta cta" download>Download</a>
+            <a href="/clients/1.3/eagler1.3.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+            <a href="/clients/1.3/eagler1.3.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
     
           </div>
 
