--- a/1.8.html
+++ b/1.8.html
@@ -51,8 +51,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: DragonX V3</li>
         </ul>
-        <a href="/clients/1.8/DragonX_V3.html" class="card__cta cta">Play</a>
-        <a href="/clients/1.8/DragonX_V3.html" class="card__cta cta" download>Download</a>
+        <a href="/clients/1.8/DragonX_V3.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/DragonX_V3.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
 
       <div class="cards__card card">
@@ -60,8 +60,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: first release </li>
         </ul>
-        <a href="/clients/1.8/PiClient.html" class="card__cta cta">Play</a>
-        <a href="/clients/1.8/PiClient.html" class="card__cta cta" download>Download</a>
+        <a href="/clients/1.8/PiClient.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/PiClient.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
 
       <div class="cards__card card">
@@ -69,8 +69,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: UwU Client B2</li>
         </ul>
-        <a href="/clients/1.8/UwUclientB2.html" class="card__cta cta">Play</a>
-        <a href="/clients/1.8/UwUclientB2.html" class="card__cta cta" download>Download</a>
+        <a href="/clients/1.8/UwUclientB2.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/UwUclientB2.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
       
       <div class="cards__card card">
@@ -78,8 +78,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: idk</li>
         </ul>
-        <a href="/clients/1.8/ShadowClient.html" class="card__cta cta">Play</a>
-        <a href="/clients/1.8/ShadowClient.html" class="card__cta cta" download>Download</a>
+        <a href="/clients/1.8/ShadowClient.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/ShadowClient.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
 
       <div class="cards__card card">
@@ -87,8 +87,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: 3.8</li>
         </ul>
-        <a href="/clients/1.8/Resent_3.8.html" class="card__cta cta">Play</a>
-        <a href="/clients/1.8/Resent_3.8.html" class="card__cta cta" download>Download</a>
+        <a href="/clients/1.8/Resent_3.8.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/Resent_3.8.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
 
       <div class="cards__card card">
@@ -96,8 +96,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Version: Shaders</li>
         </ul>
-        <a href="/clients/1.8/EaglercraftX_Shaders.html" class="card__cta cta">Play</a>
-        <a href="/clients/1.8/EaglercraftX_Shaders.html" class="card__cta cta" download>Download</a>
+        <a href="/clients/1.8/EaglercraftX_Shaders.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
+        <a href="/clients/1.8/EaglercraftX_Shaders.html" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
       </div>
           <!-- End -->
     <div class="overlay cards__inner"></div>
