--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <div class="cards__card card">
           <h2 class="card__heading">Partners</h2>
           <ul role="list" class="card__bullets flow">
+            <li><a href="https://discord.gg/QApTQFmbAZ"><strong>InterLink</strong></a></li>
             <li><a href="/404.html"><strong>Soon...</strong></a></li>
           </ul>
         </div>
