--- a/more/updates.html
+++ b/more/updates.html
@@ -46,6 +46,24 @@
 <br>
 <br>
 <br>
+<h1 class="h1c">Small Update 2 (1/9/24)</h1>
+<br>
+<a class="h1b">[+] Updated the Update log</a>
+<br>
+<a class="h1b">[+] Added copy icons on copy buttons</a>
+<br>
+<a class="h1b">[+] Added play icons on play buttons</a>
+<br>
+<a class="h1b">[+] Added download icons on the download buttons</a>
+<br>
+<a class="h1b">[+] Added discord logo next to discord button on navigation bar</a>
+<br>
+<a class="h1b">[+] Added font awesome to credits</a>
+<br>
+<br>
+<br>
+<br>
+<br>
 <h1 class="h1c">Big Update 5 (1/9/24)</h1>
 <br>
 <a class="h1b">[+] Eaglercraft server checker</a>
