Pack download buttons logo

--- a/packs.html
+++ b/packs.html
@@ -54,7 +54,7 @@
             <br>
             <br>
           </ul>
-          <a href="/packs/! §9Blue §7Revamp §8§f128x§8.zip" class="card__cta cta" download>Download</a>
+          <a href="/packs/! §9Blue §7Revamp §8§f128x§8.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -64,7 +64,7 @@
             <br>
             <br>
           </ul>
-          <a href="/packs/!      §bnebu§3l§ba §8[§f16§5x§8].zip" class="card__cta cta">Download</a>
+          <a href="/packs/!      §bnebu§3l§ba §8[§f16§5x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -74,7 +74,7 @@
             <br>
             <br>
           </ul>
-          <a href="/packs/!    §bNico§3Fruit §f[16x] (1).zip" class="card__cta cta">Download</a>
+          <a href="/packs/!    §bNico§3Fruit §f[16x] (1).zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -84,7 +84,7 @@
             <br>
             <br>
           </ul>
-          <a href="/packs/!         §b§lBombies §8[§f180k§8].zip" class="card__cta cta">Download</a>
+          <a href="/packs/!         §b§lBombies §8[§f180k§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -94,7 +94,7 @@
             <br>
             <br>
           </ul>
-          <a href="/packs/!       Lunar [§816x§f].zip" class="card__cta cta">Download</a>
+          <a href="/packs/!       Lunar [§816x§f].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -102,7 +102,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>Fatcat 16x</h2></li>
           </ul>
-          <a href="/packs/!     §bfat cat §f[§b16§7x§f].zip" class="card__cta cta">Download</a>
+          <a href="/packs/!     §bfat cat §f[§b16§7x§f].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -110,7 +110,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>Toxica 16x</h2></li>
           </ul>
-          <a href="/packs/!                 §5tóxica §816x.zip" class="card__cta cta">Download</a>
+          <a href="/packs/!                 §5tóxica §816x.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -118,7 +118,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>Venom Revamp 16x</h2></li>
           </ul>
-          <a href="/packs/! §9VENOM §8§l[§f§816x§l] §f§8REVAMP.zip" class="card__cta cta">Download</a>
+          <a href="/packs/! §9VENOM §8§l[§f§816x§l] §f§8REVAMP.zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -126,7 +126,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>XLEXXD V3 16x</h2></li>
           </ul>
-          <a href="/packs/!  §bxlexxd v3 §8[§f16x§8].zip" class="card__cta cta">Download</a>
+          <a href="/packs/!  §bxlexxd v3 §8[§f16x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -134,7 +134,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>Tie Pack 16x</h2></li>
           </ul>
-          <a href="/packs/! §bDynamic §7Duo §8Revamp §8[§732x§8].zip" class="card__cta cta">Download</a>
+          <a href="/packs/! §bDynamic §7Duo §8Revamp §8[§732x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -142,7 +142,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>Dynamic Duo 32x</h2></li>
           </ul>
-          <a href="/packs/! §bDynamic §7Duo §8Revamp §8[§732x§8].zip" class="card__cta cta">Download</a>
+          <a href="/packs/! §bDynamic §7Duo §8Revamp §8[§732x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -150,7 +150,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>Nebula 32x</h2></li>
           </ul>
-          <a href="/packs/!      §bnebu§3l§ba §8[§f32§5x§8].zip" class="card__cta cta">Download</a>
+          <a href="/packs/!      §bnebu§3l§ba §8[§f32§5x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -158,7 +158,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>War V2 32x</h2></li>
           </ul>
-          <a href="/packs/! §bWAR §8V2 §8[§f64x§8].zip" class="card__cta cta">Download</a>
+          <a href="/packs/! §bWAR §8V2 §8[§f64x§8].zip" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -166,7 +166,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>Proofr's Crystals Overlay</h2></li>
           </ul>
-          <a href="/packs/crystals.html" class="card__cta cta">View</a>
+          <a href="/packs/crystals.html" class="card__cta cta">View...</a>
         </div>
 
         <!-- End the texture packs -->
