--- a/packs/crystals.html
+++ b/packs/crystals.html
@@ -51,7 +51,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h1><strong>Default Crystals</strong></h1></li>
           </ul>
-          <a href="/packs/Default_Crystal.zip" class="card__cta cta" download>Download</a>
+          <a href="/packs/Default_Crystal.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -59,7 +59,7 @@
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Yellow Crystals</strong></h1></li>
             </ul>
-            <a href="/packs/Yellow_Crystal.zip" class="card__cta cta" download>Download</a>
+            <a href="/packs/Yellow_Crystal.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
           </div>
 
         <div class="cards__card card">
@@ -67,7 +67,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h1><strong>Green Crystals</strong></h1></li>
           </ul>
-          <a href="/packs/Green_Crystal.zip" class="card__cta cta" download>Download</a>
+          <a href="/packs/Green_Crystal.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
         </div>
 
         <div class="cards__card card">
@@ -75,7 +75,7 @@
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Orange Crystals</strong></h1></li>
             </ul>
-            <a href="/packs/Orange_Crystal.zip class="card__cta cta" download>Download</a>
+            <a href="/packs/Orange_Crystal.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
           </div>
 
           <div class="cards__card card">
@@ -83,7 +83,7 @@
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Red Crystals</strong></h1></li>
             </ul>
-            <a href="/packs/Red_Crystal.zip" class="card__cta cta" download>Download</a>
+            <a href="/packs/Red_Crystal.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
           </div>
 
           <div class="cards__card card">
@@ -91,7 +91,7 @@
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Blue Crystals</strong></h1></li>
             </ul>
-            <a href="/packs/Blue_Crystal.zip" class="card__cta cta" download>Download</a>
+            <a href="/packs/Blue_Crystal.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp Download</a>
           </div>
 
           <div class="cards__card card">
@@ -99,7 +99,7 @@
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Purple Crystals</strong></h1></li>
             </ul>
-            <a href="/packs/Purple_Crystal.zip" class="card__cta cta" download>Download</a>
+            <a href="/packs/Purple_Crystal.zip" class="card__cta cta" download><i class="fa-solid fa-download"></i>&nbsp </a>
           </div>
 
         <!-- End the texture packs -->
