--- a/more.html
+++ b/more.html
@@ -53,7 +53,7 @@
             <br>  
             <br>
           </ul>
-          <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta">Join...</a>
+          <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp Join...</a>
         </div>
 
         <div class="cards__card card">
@@ -61,7 +61,7 @@
           <ul role="list" class="card__bullets flow">
             <li>Looking for <strong>MORE</strong> clients? Eaglercrack Archive is the <strong>BIGGEST</strong> eaglercraft archive!</li>
           </ul>
-          <a href="https://eaglercrack-archive.vercel.app" class="card__cta cta">Visit...</a>
+          <a href="https://eaglercrack-archive.vercel.app" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp Visit...</a>
         </div>
 
         <div class="cards__card card">
@@ -71,7 +71,7 @@
             <br>
             <br>
           </ul>
-          <a href="/more/blogs.html" class="card__cta cta">View...</a>
+          <a href="/more/blogs.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
         <div class="cards__card card">
@@ -81,7 +81,7 @@
             <li>(only eaglercraft servers)</li>
             <br>
           </ul>
-          <a href="/servers/servers.html" class="card__cta cta">View...</a>
+          <a href="/servers/servers.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
         <div class="cards__card card">
@@ -91,7 +91,7 @@
             <li></li>
             <br>
           </ul>
-          <a href="/more/updates.html" class="card__cta cta">View...</a>
+          <a href="/more/updates.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
 
@@ -102,7 +102,7 @@
             <li>(BETA)</li>
             <br>
           </ul>
-          <a href="/more/blank.html" class="card__cta cta">View...</a>
+          <a href="/more/blank.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
         <div class="cards__card card">
@@ -110,7 +110,7 @@
           <ul role="list" class="card__bullets flow">
             <li>Make a Google form if you want to be partner, add your server/client to the list, etc.</li>
           </ul>
-          <a href="/more/forms.html" class="card__cta cta">Visit...</a>
+          <a href="/more/forms.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp Visit...</a>
         </div>
 
         <div class="cards__card card">
@@ -120,7 +120,7 @@
             <br>
             <br>
           </ul>
-          <a href="/more/faq.html" class="card__cta cta">View...</a>
+          <a href="/more/faq.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
         <!-- Start the cards -->
       <div class="overlay cards__inner"></div>
