--- a/more/blogs.html
+++ b/more/blogs.html
@@ -51,7 +51,7 @@
           <ul role="list" class="card__bullets flow">
             <li>Best 1.8 Eaglercraft FPS settings.</li>
           </ul>
-          <a href="/blogs/bestfps.html" class="card__cta cta">View...</a>
+          <a href="/blogs/bestfps.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
         <div class="cards__card card">
@@ -59,7 +59,7 @@
           <ul role="list" class="card__bullets flow">
             <li>How to fix certain bugs.</li>
           </ul>
-          <a href="/blogs/issue.html" class="card__cta cta">View...</a>
+          <a href="/blogs/issue.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
         <div class="cards__card card">
@@ -68,7 +68,7 @@
             <li>More Eaglercrack links</li>
             <br>  
           </ul>
-          <a href="/blogs/links.html" class="card__cta cta">View...</a>
+          <a href="/blogs/links.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
         <!-- End the blogs-->
       <div class="overlay cards__inner"></div>
