--- a/clients.html
+++ b/clients.html
@@ -50,7 +50,7 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/21/23</li>
         </ul>
-        <a href="/1.5.html" class="card__cta cta">Select</a>
+        <a href="/1.5.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp Select</a>
       </div>
 
       <div class="cards__card card">
@@ -58,7 +58,7 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/21/23</li>
         </ul>
-        <a href="/1.8.html" class="card__cta cta">Select</a>
+        <a href="/1.8.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp Select</a>
       </div>
 
       <div class="cards__card card">
@@ -66,7 +66,7 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/21/23</li>
         </ul>
-        <a href="/1.3.html" class="card__cta cta">Select</a>
+        <a href="/1.3.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp Select</a>
       </div>
     </div>
     
